Preenchendo com Position e criando um Menu

--- a/FormataçãoHTML4-JOY/Questão1.css
+++ b/FormataçãoHTML4-JOY/Questão1.css
@@ -5,3 +5,9 @@ p {
     font-family: Arial, sans-serif; 
     background-color: green; 
 }
+
+body{
+    background-color: black;
+    height: 1000px;
+    margin-top: 35vh;
+}
