--- a/SA-1/style.css
+++ b/SA-1/style.css
@@ -1,4 +1,3 @@
-/* Reset de Estilos */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -12,7 +11,6 @@ body {
     margin: 0;
 }
 
-/* Estilos para o Cabeçalho */
 header {
     position: fixed;
     top: 0;
@@ -25,6 +23,7 @@ header {
     justify-content: space-between;
     padding: 0 20px;
     z-index: 1000;
+    transition: all 0.3s ease;
 }
 
 .logo {
@@ -65,9 +64,54 @@ nav {
     color: rgb(69, 191, 214);
 }
 
-/* Estilos Gerais do Main */
+.menu-hamburguer {
+    display: none; 
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.menu-hamburguer div {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.nav-mobile {
+    display: none; 
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: rgb(32, 41, 173);
+    padding: 10px 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1001;
+    flex-direction: column;
+}
+
+.nav-mobile a {
+    display: block;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.nav-mobile a:hover {
+    background-color: rgb(69, 191, 214);
+}
+
+
+.nav-mobile.active {
+    display: flex; 
+}
+
 main {
-    margin-top: 80px;
+    margin-top: 0px;
     padding: 2rem;
 }
 
@@ -76,7 +120,6 @@ main {
     margin: 0 auto;
 }
 
-/* Estilos para a Seção de Descrição */
 .descricao {
     display: flex;
     align-items: flex-start;
@@ -111,7 +154,6 @@ main {
     line-height: 1.6;
 }
 
-/* Estilos para os Cards */
 .cards {
     display: flex;
     gap: 20px;
@@ -166,7 +208,6 @@ main {
     background-color: rgb(32, 41, 173);
 }
 
-/* Estilos do Card Detalhado */
 .card-detalhado {
     background-color: #fff;
     border-radius: 8px;
@@ -224,7 +265,6 @@ main {
     background-color: rgb(32, 41, 173);
 }
 
-/* Estilos para o Rodapé */
 footer {
     display: flex;
     justify-content: space-between;
@@ -277,8 +317,30 @@ footer {
     align-items: flex-start;
 }
 
-/* Responsividade para Largura de 768px ou Menos */
 @media (max-width: 768px) {
+    header {
+        padding: 0 10px;
+        position: relative;
+    }
+
+    .logo {
+        width: 120px;
+    }
+
+    .menu-hamburguer {
+        display: flex;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .nav-mobile {
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+    }
+
     .descricao {
         flex-direction: column;
         align-items: center;
@@ -303,16 +365,12 @@ footer {
     }
 
     .icones i {
-        font-size: 24px; /* Reduz o tamanho dos ícones */
+        font-size: 24px; 
     }
 
     .botao {
         padding: 8px 16px;
         font-size: 14px;
-    }
-
-    .logo {
-        width: 120px; /* Ajusta o tamanho da logo */
     }
 
     footer {
