--- a/SA-1/style.css
+++ b/SA-1/style.css
@@ -7,15 +7,19 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     margin: 0;
+
+    min-height: 100vh;
+    width: 100vw;
+
 }
 
 header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100px;
     background-color: rgb(32, 41, 173);
     display: flex;
@@ -45,7 +49,7 @@ nav {
 }
 
 .botao:hover {
-    background-color: rgb(251, 89, 9);
+    /* background-color: rgb(251, 89, 9); */
 }
 
 .icones {
@@ -273,6 +277,9 @@ footer {
     color: white;
     padding: 20px;
     flex-wrap: wrap;
+    width: 100vw;
+
+    overflow: hidden;
 }
 
 .footer-logos {
@@ -391,3 +398,238 @@ footer {
         justify-content: center;
     }
 }
+
+ 
+.container-cadastro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 70px); 
+    padding: 20px;
+}
+.card-cadastro {
+    width: 100%;
+    max-width: 600px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+.card-cadastro h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    text-align: center;
+}
+.card-cadastro .form-group {
+    margin-bottom: 15px;
+}
+.card-cadastro .form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+.card-cadastro .form-group input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+.card-cadastro .form-group input[type="submit"] {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 15px;
+}
+.card-cadastro .form-group input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+
+/* HEADER  */
+
+.menu{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    background-color: rgb(69, 191, 214);
+
+    /* display: flex; */
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    display: none;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    padding: 10px;
+
+    gap: 6px;
+
+
+    min-width: 20vw;
+    height: 100%;
+    
+    
+}
+
+.fecharBtn{
+    height: 19.25px;
+    background-color: red  !important;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 19.25px; */
+
+    /* position: absolute;
+
+    top: 4px;
+    left: 4px; */
+}
+
+.iconeFechar{
+    background-image: url(icones/fechar.png);
+    background-position: center;
+    background-size: cover;
+    
+    height: 16px;
+    width: 16px;
+
+}
+
+@media(max-width: 600px){
+    .menu{
+        /* background-color: red; */
+    }
+
+    .menu > *{
+        font-size: 0.8rem !important;
+        text-align: center;
+
+        border-radius: 4px;
+
+        box-shadow: 1px 1px 4px black;
+        
+        background-color: rgb(32, 41, 173);
+
+        color: white;
+    }
+}
+
+.menu > *{
+    text-decoration: none;
+    flex-grow: 1;
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.visivel{
+    display: flex;
+}
+
+.naoVisivel{
+    display: none !important;
+}
+
+.menu{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    background-color: rgb(69, 191, 214);
+
+    /* display: flex; */
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    display: none;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    padding: 10px;
+
+    gap: 6px;
+
+
+    min-width: 20vw;
+    height: 100%;
+    
+    
+}
+
+.fecharBtn{
+    height: 19.25px;
+    background-color: red  !important;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 19.25px; */
+
+    /* position: absolute;
+
+    top: 4px;
+    left: 4px; */
+}
+
+.iconeFechar{
+    background-image: url(icones/fechar.png);
+    background-position: center;
+    background-size: cover;
+    
+    height: 16px;
+    width: 16px;
+
+}
+
+@media(max-width: 600px){
+    .menu{
+        /* background-color: red; */
+    }
+
+    .menu > *{
+        font-size: 0.8rem !important;
+        text-align: center;
+
+        border-radius: 4px;
+
+        box-shadow: 1px 1px 4px black;
+        
+        background-color: rgb(32, 41, 173);
+
+        color: white;
+    }
+}
+
+.menu > *{
+    text-decoration: none;
+    flex-grow: 1;
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.visivel{
+    display: flex;
+}
+
+.naoVisivel{
+    display: none !important;}
